--- a/app/config/local.neon
+++ b/app/config/local.neon
@@ -4,4 +4,4 @@ parameters:
 database:
 	dsn: 'mysql:host=127.0.0.1;dbname=iisDatabase'
 	user: root
-	password: KOKOSkokos121@
+	password: kokosKOKOS121
