--- a/app/config/common.neon
+++ b/app/config/common.neon
@@ -20,4 +20,5 @@ di:
 services:
 	- App\Router\RouterFactory::createRouter
 	- App\LoginModule\Model\MyAuthenticator
+	- App\BookModule\Model\BookFinder
 	- App\LoginModule\Model\AuthorizatorFactory::create
