editing of profile added

--- a/app/config/common.neon
+++ b/app/config/common.neon
@@ -19,6 +19,11 @@ di:
 
 services:
 	- App\Router\RouterFactory::createRouter
+
 	- App\LoginModule\Model\MyAuthenticator
+
 	- App\BookModule\Model\BookFinder
+
+	- App\UserModule\Model\EditUser
+
 	- App\LoginModule\Model\AuthorizatorFactory::create
