--- a/app/config/common.neon
+++ b/app/config/common.neon
@@ -26,4 +26,6 @@ services:
 
 	- App\UserModule\Model\EditUser
 
+	- App\AdminModule\Model\UserAdmPage
+
 	- App\LoginModule\Model\AuthorizatorFactory::create
