libary module done

--- a/app/config/common.neon
+++ b/app/config/common.neon
@@ -28,4 +28,6 @@ services:
 
 	- App\AdminModule\Model\UserAdmPage
 
+	- App\LibraryModule\Model\LibraryModel
+
 	- App\LoginModule\Model\AuthorizatorFactory::create
