--- a/app/config/common.neon
+++ b/app/config/common.neon
@@ -34,4 +34,8 @@ services:
 
 	- App\BookTransactionModule\Model\BookTransactionModel
 
+	- App\BorrowingModule\Model\BorrowingModel
+
 	- App\LoginModule\Model\AuthorizatorFactory::create
+
+
