--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,7 +1,4 @@
-# Apache configuration file (see https://httpd.apache.org/docs/current/mod/quickreference.html)
-Require all granted
-
-# disable directory listing
+Allow from all
 <IfModule mod_autoindex.c>
 	Options -Indexes
 </IfModule>
